fix whitespace

--- a/src/entities/MainPage/ContactTeam/ContactTeam.module.css
+++ b/src/entities/MainPage/ContactTeam/ContactTeam.module.css
@@ -7,6 +7,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  padding-top: 10rem;
 }
 
 .section {
@@ -14,7 +15,7 @@
   flex-direction: column;
   justify-content: center;
   max-width: 1280px;
-  margin: 10rem auto 0;
+  margin: 0 auto;
 }
 
 .title {
